add reponsive in the website